# ProjectEngine

./: .gitignore  CMakeLists.txt  README.md
Asset/Scene/: Rosalia.fbx
Asset/Shaders/: basic.ps  basic.vs  color.ps  color.vs  copy_ps.hlsl  debug.ps  debug.vs  debug_ps.hlsl  debug_vs.hlsl  pbrDefault_ps.hlsl  pbrDefault_vs.hlsl  pbr_ps.hlsl  pbr_vs.hlsl  simple.hlsl
CMake/: Common.cmake  EngineConfig.h  EngineConfig.h.in  MacOS.cmake  PlatformDependencies.cmake  Windows.cmake
Empty/: EmptyApplication.cpp
Framework/Codec/: BMP.hpp
Framework/Common/: Allocator.cpp  Allocator.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  Buffer.hpp  CMakeLists.txt  GfxConfiguration.h  GraphicsManager.cpp  GraphicsManager.hpp  Image.cpp  Image.hpp  MemoryManager.cpp  MemoryManager.hpp  Mesh.h  ProjectEngine.cpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.hpp  SceneObject.cpp  SceneObject.hpp  SceneParser.cpp  Utility.hpp  VectorMath.h  cbuffer.h  portable.hpp  shader_base.h
Framework/Common/Test/: CMakeLists.txt  SceneObjectTest.cpp
Framework/GeomMath/: CMakeLists.txt  GeomMath.h  GeomMath.hpp
Framework/GeomMath/include/: AddByElement.h  CrossProduct.h  DotProduct.h  MulByElement.h  Normalize.h  SubByElement.h  Transform.h  Transpose.h
Framework/GeomMath/ispc/: AddByElement.ispc  CMakeLists.txt  CrossProduct.ispc  DotProduct.ispc  MatrixExchangeYandZ.ispc  MulByElement.ispc  Normalize.ispc  SubByElement.ispc  Transform.ispc  Transpose.ispc
Framework/GeomMath/test/: test.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp  ImageParser.hpp  SceneParser.hpp
Framework/Parser/: OGEX.hpp
Platform/Empty/: EmptyApplication.cpp  EmptyApplication.hpp
Platform/Windows/: CMakeLists.txt  D3D12Application.cpp  Mesh.h  OpenGLApplication.cpp  OpenGLApplication.hpp  ProjectEngine_D2D.cpp  ProjectEngine_D3D11.cpp  ProjectEngine_D3D12.cpp  ProjectEngine_D3D12_Mesh.cpp  ProjectEngine_OpenGL.cpp  ProjectEngine_Win.cpp  WindowsApplication.cpp  WindowsApplication.hpp  copy.pso  copy.vs  copy.vso  d3dx12.h  illum.hs
Platform/Windows/Test/: CMakeLists.txt  TextureLoadTest.cpp
RHI/: CMakeLists.txt
RHI/D2D/: CMakeLists.txt  D2DGraphicsManager.cpp  D2DGraphicsManager.hpp
RHI/D3D/: CMakeLists.txt  D3D12GraphicsManager.cpp  D3D12GraphicsManager.hpp
RHI/OpenGL/: CMakeLists.txt  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp
Sources/: CMakeLists.txt
Sources/Framework/Common/Application/: Application.cpp  Application.h  WindowsApplication.cpp  WindowsApplication.h
Sources/Framework/Common/IO/: IOManager.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Sources/Framework/Common/Math/: MathLib.h
Sources/Framework/Common/Memory/: Allocator.cpp  Allocator.h  MemoryManager.cpp  MemoryManager.h
Sources/Framework/Common/Object/: Entity.cpp  Entity.h  World.cpp  World.h
Sources/Framework/Common/Object/Components/: CameraComponent.cpp  CameraComponent.h  MeshRenderComponent.cpp  MeshRenderComponent.h  TransformComponent.cpp  TransformComponent.h
Sources/Framework/Common/Object/System/: CameraSystem.cpp  CameraSystem.h  MeshRenderSystem.cpp  MeshRenderSystem.h  RenderDebugSystem.cpp  RenderDebugSystem.h
Sources/Framework/Common/Time/: TimeManager.h
Sources/Framework/Common/Utils/: ImageParser.h  Logging.h  Singleton.h  TimeManager.cpp  TimeManager.h
Sources/Framework/Interface/: IApplication.h  IComponent.h  IModule.h  IResource.h  IShader.h  ISystem.h
Sources/Framework/RHI/: DeviceContext.h  GraphicsManager.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  RenderMesh.cpp  RenderMesh.h  RenderObject.cpp  RenderObject.h  SamplerState.cpp  SamplerState.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
Sources/Framework/RHI/D3D11/: DeviceContextD3D11.cpp  DeviceContextD3D11.h  GraphicsManagerD3D11.cpp  GraphicsManagerD3D11.h  IndexBufferD3D11.cpp  IndexBufferD3D11.h  MaterialD3D11.cpp  MaterialD3D11.h  RenderMeshD3D11.cpp  RenderMeshD3D11.h  SamplerStateD3D11.cpp  SamplerStateD3D11.h  ShaderD3D11.cpp  ShaderD3D11.h  TextureD3D11.cpp  TextureD3D11.h  VertexBufferD3D11.cpp  VertexBufferD3D11.h
Sources/Platform/: ArchDetect.h  Assert.h  BuildType.h  MacOS.h  Platform.h
Sources/Programs/: CMakeLists.txt  ProjectEngine.cpp
Test/: AssetLoaderTest.cpp  CMakeLists.txt  OgexParserTest.cpp  SceneLoadingTest.cpp  TextureLoadTest.cpp
Tests/: CMakeLists.txt  TestAssimp.cpp  TestGMemoryManager.cpp  TestGuid.cpp  TestMath.cpp  TestObjects.cpp
cmake/: FindLibuuid.cmake
