cmake_minimum_required (VERSION 3.1)
project (ProjectEngine)

set (CMAKE_C_STANDARD 11)
set (CMAKE_CXX_STANDARD 17)

include_directories("${PROJECT_SOURCE_DIR}/CMake")
include_directories("${PROJECT_SOURCE_DIR}/Sources")
include_directories("Sources/Framework/Common")
include_directories("Sources/Framework/Interface")
include_directories("Sources/Framework/RHI")
include_directories("${PROJECT_SOURCE_DIR}/External")

MESSAGE(STATUS "PROJECT_SOURCE_DIR" ${PROJECT_SOURCE_DIR})

include(${PROJECT_SOURCE_DIR}/CMake/TargetArchDetect.cmake)
target_architecture(TARGET_ARCH)
include(${PROJECT_SOURCE_DIR}/CMake/PlatformDependencies.cmake)
include(${PROJECT_SOURCE_DIR}/CMake/ToolChain.cmake)
include(${PROJECT_SOURCE_DIR}/CMake/Common.cmake)

IF(${WIN32})
    include(${PROJECT_SOURCE_DIR}/CMake/Windows.cmake)
    add_compile_definitions(WIN32)
ELSEIF(${UNIX})
    IF(${APPLE})
        include(${PROJECT_SOURCE_DIR}/CMake/MacOS.cmake)
        add_compile_definitions(APPLE)
    ELSE(${APPLE})
    ENDIF(${APPLE})
ENDIF(${WIN32})

include (CTest)
add_subdirectory(Sources)
add_subdirectory(Tests)